--- a/bereiche.html
+++ b/bereiche.html
@@ -1,25 +1,20 @@
 <!DOCTYPE html>
-<html lang='de'>
+<html lang="de">
   <head>
-    <meta charset='UTF-8'>
+    <meta charset="UTF-8">
     <title>LU02.A01 - Bereiche einsetzen</title>
-    <link rel='stylesheet' href='bereiche.css'>
+    <link rel="stylesheet" href="bereiche.css">
   </head>
 
   <body>
   <header>
-
-
     Ich bin die Kopfzeile der Seite
-
     <nav>
       Hier steht die Navigation
     </nav>
   </header>
   <main>
-
     Der Hauptinhalt folgt hier.
-
     <article>
       Ich bin der erste Artikel.
       <section>Als Abschnitt gehöre ich zum ersten Artikel.</section>
